클래스분리 등 실시

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ client/UIPackage/__pycache__/alarm.cpython-311.pyc
 client/UIPackage/__pycache__/connect.cpython-311.pyc
 client/UIPackage/__pycache__/test.cpython-311.pyc
 client/UIPackage/__pycache__/*
+client.zip
