cron 불러오는 오류 수정

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ client/UIPackage/__pycache__/connect.cpython-311.pyc
 client/UIPackage/__pycache__/test.cpython-311.pyc
 client/UIPackage/__pycache__/*
 client.zip
+crual_grouptask.zip
