IP를 입력받은 후 클라 실행하도록 변경

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ client/UIPackage/__pycache__/test.cpython-311.pyc
 client/UIPackage/__pycache__/*
 client.zip
 crual_grouptask.zip
+client/UIPackage/__pycache__/*.pyc
+client/UIPackage/__pycache__/*.pyc
