--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ client.zip
 crual_grouptask.zip
 client/UIPackage/__pycache__/*.pyc
 client/UIPackage/__pycache__/*.pyc
+client/UIPackage/__pycache__/alarm.cpython-311.pyc
+client/UIPackage/__pycache__/config.cpython-311.pyc
+client/UIPackage/__pycache__/test.cpython-311.pyc
